---------------------------------------------------------------------------------------------------
Version: 1.10.5
Date: 2019-03-19
  Changes:
    - moved more functionality to Opteras Library
---------------------------------------------------------------------------------------------------
Version: 1.10.4
Date: 2019-03-19
  Changes:
    - moved functionality to Opteras Library
  Bugfixes:
    - renaming stops in editor can cause errors
---------------------------------------------------------------------------------------------------
Version: 1.10.3
Date: 2019-03-14
  Features:
    - added on_delivery_pickup_complete
  Changes:
    - removed get_ prefix and _event suffix from events
  Bugfixes:
    - fixed potential upgrade path errors
---------------------------------------------------------------------------------------------------
Version: 1.10.2
Date: 2019-03-07
  Features:
    - added Stack Thresholds, only for items of course
  Changes:
    - refactored code into modules
    - interface events return data formatted like base events, e.g. event.provided_by_stop, event.requests_by_stop
  Bugfixes:
    - fixed potential nil reference #157
---------------------------------------------------------------------------------------------------
Version: 1.10.1
Date: 2019-03-03
  Features:
    - recipes are more affordable with Bob Electronics
    - added circuit network as dependency for technology
    - fluid unloads signal fluids with constant -1 #154
  Changes:
    - switched dependency for creative-mode to the 0.17 re-release
---------------------------------------------------------------------------------------------------
Version: 1.10.0
Date: 2019-02-27
  Features:
    - updated to Factorio 0.17
    - new thumbnail
    - status lamp works without power
---------------------------------------------------------------------------------------------------
Version: 1.9.11
Date: 11.2.2019
  Changes: