@@ -30,8 +30,7 @@ logistic-train-network=Logistic Train Network
 logistic-train-network=Logistic Train Stops request and provide items for fully automated train deliveries.
 
 [virtual-signal-name]
-LTN-locomotive=Encoded positions of __1__
-LTN-wagon=Encoded positions of __1__
+ltn-position=Encoded positions of __1__
 ltn-depot=Stop is Depot
 ltn-network-id=Encoded Network ID
 ltn-min-train-length=Minimum Train Length
